--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
     <div class="flex-container" id="planos">
 
-        <div><h2>Planos</h2></div>
+        <div>
+            <h2>Planos</h2>
+        </div>
 
         <div class="list-planos">
             <div class="item-plano">
@@ -121,9 +123,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox</p>
+            <p>Desenvolvido por: Yuji Watanabe</p>
+        </div>
     </footer>
 </body>
-
 </html>
