some updates for mobile size

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </div>
 
     <div class="flex-container" id="about">
-        <div>
+        <div class="about-txt">
             <h2>Quem somos</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. </p>
-            <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed
-                to using 'Content here, content here', making it look like readable English.</p>
+            <p>Mussum Ipsum, cacilds vidis litro abertis. Atirei o pau no gatis, per gatis num morreus. Vehicula non. Ut
+                sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. </p>
+            <p>Suco de cevadiss deixa as pessoas mais interessantis. Praesent vel viverra nisi. Mauris aliquet nunc non
+                turpis scelerisque, eget.</p>
         </div>
 
         <div>
@@ -129,4 +129,5 @@
         </div>
     </footer>
 </body>
+
 </html>
