--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="flex-container menu">
+        <div class="flex-container menu" id="top">
             <div>
                 <h1>FlexTurismos</h1>
             </div>
